<resources>
    <string name="app_name">TwoActivities</string>
    <string name="buttonText">Send</string>
    <string name="second_activity_name">Second Activity</string>
    <string name="header_text">Message Received</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="editText_main">Enter your message here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
</resources>


